# attendance-system

./: AUTO_UPDATE_GUIDE.md  README.md  TAURI_V2_MIGRATION.md  latest.json.example  package-lock.json  package.json
.github/workflows/: release.yml
app/: layout.tsx  page.tsx
app/admin/: page.tsx
app/qr/: page.tsx
components/admin/: bulk-attendance.tsx  prefect-search.tsx
components/ui/: backup-manager.tsx  real-time-sync.tsx  storage-monitor.tsx  update-checker.tsx  update-dialog.tsx
lib/: attendance.ts  backup.ts  network.ts  storage.ts  tauri-storage.ts  updater.ts
public/: backup.ts
src-tauri/: Cargo.toml  LICENSE  installer.nsi  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs
